--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap");
+html, body {
+  color: #191919;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+}
+
 .btn-yellow {
   background-color: #f9d783;
   border: 1px solid #f9d783;
@@ -8,6 +15,11 @@
   font-weight: 600;
   font-size: 16px;
   border-radius: 25px;
+  /*&:hover {
+      background-color: #191919;
+      border: 1px solid #f9d783;
+      color: #191919;
+  }*/
 }
 .btn-yellow i {
   margin-left: 8px;
@@ -44,6 +56,57 @@
 header {
   background-color: #F0EFE9;
   padding: 16px;
+  /*.container {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 70px;
+
+      .menu-bars {
+          border: none;
+          font-size: 25px;
+          background-color: transparent;
+
+          @media(min-width:992px ) {
+              display: none;
+          }
+
+
+      }
+      .menu {
+
+          display:none;
+          flex: 1;
+
+              @media (min-width:992px) {
+              display: block;
+          }
+
+
+
+
+              .top-menu {
+                  display: flex;
+                  justify-content: space-between;
+
+
+                  .contant-information {
+                      display: flex;
+                      .contant-box {
+                          padding-right: 30px;
+                          margin-right: 30px;
+                          border-right: 1px solid color #DAD9D3 ;
+                      }
+                  }
+
+              }
+
+
+
+      }
+
+
+  }*/
 }
 header .container {
   display: flex;
@@ -72,15 +135,74 @@ header .container .menu {
 }
 header .container .menu .top-menu {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
+  align-items: center;
+  border-bottom: 1px solid #dad9d3;
+  padding-bottom: 10px;
+}
+@media (min-width: 1200px) {
+  header .container .menu .top-menu {
+    justify-content: space-between;
+  }
 }
 header .container .menu .top-menu .contant-information {
-  display: flex;
+  display: none;
+  align-items: center;
 }
-header .container .menu .top-menu .contant-information .contant-box {
+@media (min-width: 1200px) {
+  header .container .menu .top-menu .contant-information {
+    justify-content: flex;
+  }
+}
+header .container .menu .top-menu .contant-information .contact-box {
   padding-right: 30px;
   margin-right: 30px;
-  border-right: 1px solid color #DAD9D3;
+  border: 1px solid #dad9d3;
+  font-family: "Inter", sans-serif;
+  font-size: 15px;
+  font-weight: 300;
+}
+header .container .menu .top-menu .contant-information .contact-box i {
+  margin-right: 5px;
+  font-size: 1.2em;
+}
+header .container .menu .top-menu .contant-information .contact-box.last {
+  border: none;
+}
+header .container .menu .top-menu .social-media a {
+  color: #191919;
+  font-size: 1.3rem;
+  margin-left: 10px;
+}
+header .container .menu .top-menu .social-media a:hover {
+  color: #7c7c7c;
+}
+header .container .menu .main-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 10px;
+}
+header .container .menu .main-menu nav a {
+  display: inline-block;
+  color: #191919;
+  text-decoration: none;
+  margin-right: 35px;
+  position: relative;
+}
+header .container .menu .main-menu nav a.active {
+  font-weight: 500;
+}
+header .container .menu .main-menu nav a.active ::after, header .container .menu .main-menu nav a:hover::after {
+  content: "";
+  position: absolute;
+  font-weight: 500;
+  height: 2px;
+  width: 15px;
+  background-color: #191919;
+  left: 50%;
+  bottom: -3px;
+  transform: translate(calc(50% - 15px));
 }
 
 .showcase {
