--- a/css/style.scss
+++ b/css/style.scss
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
 
- @import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,900&display=swap');
-
-
-
+html, body {
+    color: #191919;
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+}
 
 
 
@@ -23,6 +26,11 @@
         font-size: 0.9em;
 
     }
+    /*&:hover {
+        background-color: #191919;
+        border: 1px solid #f9d783;
+        color: #191919;
+    }*/
      
     &:hover {
         background-color: #191919;
@@ -54,12 +62,138 @@
         color: #F0EFE9;
     }
 }
+
 header {
     background-color: #F0EFE9;
     padding: 16px;
     
-       
     .container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 70px;
+
+        .menu-bars {
+            border: none;
+            font-size: 25px;
+            background-color: transparent;
+
+            @media (min-width: 992px) {
+                display: none;
+            }
+
+        }
+
+        .menu {
+            display: none;
+            flex: 1;
+           
+            @media (min-width: 992px) {
+                display: block;
+
+            }
+            
+            .top-menu {
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
+                border-bottom:1px solid #dad9d3;
+                padding-bottom: 10px;
+
+                @media (min-width: 1200px) {
+                    justify-content: space-between;
+                }
+                
+
+                .contant-information {
+                    display: none;
+                    align-items: center;
+                    
+                    @media (min-width: 1200px) {
+                        justify-content: flex;
+                    }
+
+                    .contact-box {
+                        padding-right: 30px;
+                        margin-right: 30px;
+                        border:1px solid #dad9d3;
+                        font-family: 'Inter', sans-serif;
+                        font-size: 15px;
+                        font-weight: 300;
+
+                        i {
+                            margin-right: 5px;
+                            font-size: 1.2em;
+                            
+                        }
+
+                        &.last {
+                            border: none;
+                        }
+                    }
+                }
+
+                .social-media {
+                    a {
+                        color: #191919;
+                        font-size: 1.3rem;
+                        margin-left: 10px;
+
+                        &:hover {
+                            color: #7c7c7c;
+                        }
+                    }
+                }
+              
+            }
+
+            .main-menu {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding-top: 10px;
+
+                nav {
+                    a {
+                        display: inline-block;
+                        color: #191919;
+                        text-decoration: none;
+                        margin-right: 35px;
+                        position: relative;
+
+                        &.active {
+                            font-weight: 500;
+                        }
+
+                        &.active ::after,
+                        &:hover::after {
+                            content:"" ;
+                            position: absolute;
+                            font-weight: 500;
+                            height: 2px;
+                            width: 15px;
+                            background-color: #191919;
+                            left: 50%;
+                            bottom: -3px;
+                            transform: translate((calc(50% - 15px)));
+                        }
+
+                    }
+
+                }
+
+
+
+
+            }
+            
+
+        }
+
+
+    }
+       
+    /*.container {
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -80,16 +214,18 @@ header {
 
             display:none;
             flex: 1;
-            
-            
+           
                 @media (min-width:992px) {
-                    display: block;
-                }
+                display: block;
+            }
+            
+                
 
 
                 .top-menu {
                     display: flex;
                     justify-content: space-between;
+                    
 
                     .contant-information {
                         display: flex;
@@ -107,7 +243,7 @@ header {
         }
         
         
-    } 
+    }*/ 
                 
 }
 
