--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ html, body {
   border: 1px solid #f9d783;
   color: #191919;
   text-decoration: none;
-  padding: 15px 30px;
+  padding: 10px 30px;
   font-weight: 600;
   font-size: 16px;
   border-radius: 25px;
@@ -36,7 +36,7 @@ html, body {
   border: 1px solid #191919;
   color: #191919;
   text-decoration: none;
-  padding: 15px 30px;
+  padding: 10px 30px;
   font-weight: 600;
   font-size: 16px;
   border-radius: 25px;
@@ -44,8 +44,6 @@ html, body {
 .btn-transparent i {
   margin-left: 8px;
   font-size: 0.9em;
-  padding-top: 15px;
-  padding-bottom: 15px;
 }
 .btn-transparent:hover {
   background-color: #191919;
@@ -56,57 +54,6 @@ html, body {
 header {
   background-color: #F0EFE9;
   padding: 16px;
-  /*.container {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 70px;
-
-      .menu-bars {
-          border: none;
-          font-size: 25px;
-          background-color: transparent;
-
-          @media(min-width:992px ) {
-              display: none;
-          }
-
-
-      }
-      .menu {
-
-          display:none;
-          flex: 1;
-
-              @media (min-width:992px) {
-              display: block;
-          }
-
-
-
-
-              .top-menu {
-                  display: flex;
-                  justify-content: space-between;
-
-
-                  .contant-information {
-                      display: flex;
-                      .contant-box {
-                          padding-right: 30px;
-                          margin-right: 30px;
-                          border-right: 1px solid color #DAD9D3 ;
-                      }
-                  }
-
-              }
-
-
-
-      }
-
-
-  }*/
 }
 header .container {
   display: flex;
@@ -135,7 +82,7 @@ header .container .menu {
 }
 header .container .menu .top-menu {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid #dad9d3;
   padding-bottom: 10px;
@@ -145,29 +92,34 @@ header .container .menu .top-menu {
     justify-content: space-between;
   }
 }
-header .container .menu .top-menu .contant-information {
+header .container .menu .top-menu .contact-information {
   display: none;
   align-items: center;
 }
 @media (min-width: 1200px) {
-  header .container .menu .top-menu .contant-information {
-    justify-content: flex;
+  header .container .menu .top-menu .contact-information {
+    display: flex;
+    justify-content: space-between;
   }
 }
-header .container .menu .top-menu .contant-information .contact-box {
+header .container .menu .top-menu .contact-information .content-box {
   padding-right: 30px;
   margin-right: 30px;
-  border: 1px solid #dad9d3;
   font-family: "Inter", sans-serif;
   font-size: 15px;
   font-weight: 300;
+  border-right: 1px solid #dad9d3;
+  /*&.last {
+      border: none;
+  }*/
 }
-header .container .menu .top-menu .contant-information .contact-box i {
+header .container .menu .top-menu .contact-information .content-box i {
   margin-right: 5px;
   font-size: 1.2em;
 }
-header .container .menu .top-menu .contant-information .contact-box.last {
-  border: none;
+header .container .menu .top-menu .contact-information .content-box-last {
+  font-size: 15px;
+  font-weight: 300;
 }
 header .container .menu .top-menu .social-media a {
   color: #191919;
@@ -213,32 +165,32 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
   justify-content: space-between;
   align-items: center;
 }
-.showcase .contant {
+.showcase .contact {
   padding-top: 40px;
   padding-bottom: 40px;
   text-align: center;
 }
 @media (min-width: 1200px) {
-  .showcase .contant {
+  .showcase .contact {
     text-align: left;
   }
 }
-.showcase .contant h1 {
+.showcase .contact h1 {
   font-family: "DM Sans", sans-serif;
   font-weight: 700;
   font-size: 40px;
 }
 @media (min-width: 768px) {
-  .showcase .contant h1 {
+  .showcase .contact h1 {
     font-size: 70px;
   }
 }
 @media (min-width: 1400px) {
-  .showcase .contant h1 {
+  .showcase .contact h1 {
     font-size: 86px;
   }
 }
-.showcase .contant p {
+.showcase .contact p {
   font-size: 18px;
   padding-top: 40px;
   padding-bottom: 40px;
@@ -246,19 +198,19 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
   padding-right: 10px;
 }
 @media (min-width: 768px) {
-  .showcase .contant p {
+  .showcase .contact p {
     font-size: 20px;
     padding-left: 0;
     padding-right: 0;
   }
 }
-.showcase .contant a {
+.showcase .contact a {
   margin-right: 0px;
   display: block;
   margin-bottom: 20px;
 }
 @media (min-width: 768px) {
-  .showcase .contant a {
+  .showcase .contact a {
     margin-right: 10px;
     display: inline-block;
   }
