--- a/css/style.scss
+++ b/css/style.scss
@@ -16,7 +16,7 @@ html, body {
     border: 1px solid #f9d783;
     color: #191919;
     text-decoration: none;
-    padding: 15px 30px;
+    padding: 10px 30px;
     font-weight: 600;
     font-size: 16px;
     border-radius: 25px;
@@ -43,7 +43,7 @@ html, body {
     border: 1px solid #191919;
     color: #191919;
     text-decoration: none;
-    padding: 15px 30px;
+    padding: 10px 30px;
     font-weight: 600;
     font-size: 16px;
     border-radius: 25px;
@@ -51,8 +51,7 @@ html, body {
     i {
         margin-left: 8px;
         font-size: 0.9em;
-        padding-top: 15px;
-        padding-bottom: 15px;
+       
 
     }
      
@@ -95,7 +94,7 @@ header {
             
             .top-menu {
                 display: flex;
-                justify-content: flex-end;
+                justify-content: space-between;
                 align-items: center;
                 border-bottom:1px solid #dad9d3;
                 padding-bottom: 10px;
@@ -105,32 +104,39 @@ header {
                 }
                 
 
-                .contant-information {
+                .contact-information {
                     display: none;
                     align-items: center;
                     
                     @media (min-width: 1200px) {
-                        justify-content: flex;
+                        display: flex;
+                        justify-content: space-between;
+                        
                     }
 
-                    .contact-box {
+                    .content-box {
                         padding-right: 30px;
                         margin-right: 30px;
-                        border:1px solid #dad9d3;
                         font-family: 'Inter', sans-serif;
                         font-size: 15px;
                         font-weight: 300;
+                        border-right:1px solid #dad9d3;
+                        
 
                         i {
                             margin-right: 5px;
                             font-size: 1.2em;
-                            
                         }
+                        
 
-                        &.last {
+                        /*&.last {
                             border: none;
-                        }
+                        }*/
                     }
+                    .content-box-last {
+                        font-size: 15px;
+                        font-weight: 300;
+                    } 
                 }
 
                 .social-media {
@@ -193,57 +199,7 @@ header {
 
     }
        
-    /*.container {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        gap: 70px;
-        
-        .menu-bars {
-            border: none;
-            font-size: 25px;
-            background-color: transparent;
-            
-            @media(min-width:992px ) {
-                display: none;
-            }
-            
-
-        }
-        .menu {
-
-            display:none;
-            flex: 1;
-           
-                @media (min-width:992px) {
-                display: block;
-            }
-            
-                
-
-
-                .top-menu {
-                    display: flex;
-                    justify-content: space-between;
-                    
-
-                    .contant-information {
-                        display: flex;
-                        .contant-box {
-                            padding-right: 30px;
-                            margin-right: 30px;
-                            border-right: 1px solid color #DAD9D3 ;
-                        }
-                    }
-                    
-                }
-                
-
-                
-        }
-        
-        
-    }*/ 
+    
                 
 }
 
@@ -256,7 +212,7 @@ header {
         justify-content:space-between;
         align-items: center;
      }
-        .contant {
+        .contact {
             padding-top: 40px;
             padding-bottom: 40px;
             text-align: center;
