--- a/css/style.scss
+++ b/css/style.scss
@@ -10,7 +10,6 @@ html, body {
 
 
 
-
 .btn-yellow {
     background-color: #f9d783;
     border: 1px solid #f9d783;
@@ -26,11 +25,7 @@ html, body {
         font-size: 0.9em;
 
     }
-    /*&:hover {
-        background-color: #191919;
-        border: 1px solid #f9d783;
-        color: #191919;
-    }*/
+    
      
     &:hover {
         background-color: #191919;
@@ -38,6 +33,56 @@ html, body {
         color: #F0EFE9;
     }
 }
+   
+.btn-yellow {
+    background-color: #f9d783;
+    border: 1px solid #f9d783;
+    color: #191919;
+    text-decoration: none;
+    padding: 10px 30px;
+    font-weight: 600;
+    font-size: 16px;
+    border-radius: 25px;
+    
+    i {
+        margin-left: 8px;
+        font-size: 0.9em;
+
+    }
+    
+     
+    &:hover {
+        background-color: #191919;
+        border: 1px solid #191919;
+        color: #F0EFE9;
+    }
+
+}
+.btn-black {
+    background-color: #191919;
+    border: 1px solid #191919;
+    color: #FFFFFF;
+    text-decoration: none;
+    padding: 10px 30px;
+    font-weight: 600;
+    font-size: 16px;
+    border-radius: 25px;
+    
+    i {
+        margin-left: 8px;
+        font-size: 0.9em;
+
+    }
+    
+     
+    &:hover {
+        background-color: #FFFFFF;
+        border: 1px solid #191919;
+        color: #191919;
+    }
+
+}
+
 .btn-transparent {
     background-color: transparent;
     border: 1px solid #191919;
@@ -64,12 +109,18 @@ html, body {
 
 .section-title{
     // som på vedion //
-    padding-top: 120px;
-    padding-bottom: 90px;
+    padding-top: 70px;
+    padding-bottom: 30px;
+
+    @media (min-width : 768){
+        padding-top: 120px;
+        padding-bottom: 90px;
+    }
+
 
     p {
         color: #F94D1C;
-        
+        margin-bottom: 10px;
     }
 
     h2 {
@@ -78,6 +129,13 @@ html, body {
         font-weight: 700;
         font-size: 45px;
     }
+}
+
+.center-contant {
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+
 }
 
 header {
@@ -300,14 +358,80 @@ header {
 }
 
 
-// Project & case studies section //
-
-.project-and-case{
-    .container{
-
-        .section-title {
-            text-align: center;
-            padding-bottom: 20px; // som på vedion
+ /* Container for projects and cases section */
+.project-and-case {
+    .container {
+      /* Section title styles */
+      .section-title {
+        text-align: center;
+        padding-bottom: 20px; /* Add a comment if necessary */
+      }
+  
+      /* Grid for projects and cases */
+      .project-and-cases {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 30px;
+  
+        @media (min-width: 768px) {
+          grid-template-columns: 1fr 1fr;
         }
+  
+        /* Individual project or case item */
+        .project {
+          display: grid;
+          grid-template-columns: 1fr;
+          grid-template-rows: auto 1fr auto;
+          color: #191919;
+          text-decoration: none;
+  
+          
+          img {
+            width: 100%;
+            height: auto;
+          }
+  
+          
+          h3 {
+            font-family: 'DM Sans', sans-serif;
+            font-weight: 700;
+            font-size: 22px;
+            padding-top: 35px;
+            padding-bottom: 16px;
+            border-bottom: 1px solid #dad9d3;
+          }
+  
+          /* Read more link */
+          .readmore {
+            padding: 15px;
+            display: block;
+            text-align: right;
+            font-family: 'Inter', sans-serif;
+            font-size: 14px;
+            font-weight: 500;
+            color: #191919;
+            text-decoration: none;
+  
+            /* Icon within the readmore link */
+            i {
+              margin-left: 3px;
+            }
+
+            }
+
+            &:hover .readmore {
+                text-decoration: underline;
+            }
+        }
+  
+        
+        .center-content {
+          margin-top: 50px;
+          margin-bottom: 90px;
+        }
+      }
     }
-}
+  }
+         
+    
+    
