--- a/css/style.css
+++ b/css/style.css
@@ -284,14 +284,144 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
   }
 }
 
-/* Container for projects and cases section */
+.sponsors .container .sponsors-logo {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 72px;
+  padding-bottom: 71px;
+}
+@media (max-width: 992px) {
+  .sponsors .container .sponsors-logo {
+    display: none;
+  }
+}
+
+.features {
+  display: flex;
+  flex-direction: column; /* Mobile layout: stack elements vertically */
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+}
+.features .Ad {
+  text-align: center;
+}
+.features .Ad p {
+  font-family: "Inter", sans-serif;
+  font-size: 18px;
+  color: #F94D1C;
+  margin-top: 20px;
+}
+.features .Ad h2 {
+  color: #191919;
+  font-family: "DM Sans", sans-serif;
+  font-weight: 700;
+  line-height: 54px;
+  font-size: 36px; /* Decreased font size for mobile */
+  padding-bottom: 15px;
+}
+.features .Ad .btn-yellow {
+  background-color: #f9d783;
+  border: 1px solid #f9d783;
+  color: #191919;
+  text-decoration: none;
+  font-family: "Inter", sans-serif;
+  font-size: 16px; /* Default font size for mobile */
+  padding: 10px 30px; /* Default padding for mobile */
+}
+.features .Ad .btn-yellow i {
+  text-align: center;
+  margin-left: 8px;
+  font-size: 0.9em;
+}
+.features .Ad .btn-yellow:hover {
+  background-color: #191919;
+  border: 1px solid #191919;
+  color: #F0EFE9;
+}
+@media (min-width: 768px) and (max-width: 1023px) {
+  .features .Ad .btn-yellow {
+    /* Tablet (iPad Mini and iPad Air) styles */
+    font-size: 18px; /* Adjust font size for tablets */
+    padding: 15px 60px; /* Adjust padding for tablets */
+  }
+}
+@media (min-width: 1024px) {
+  .features .Ad .btn-yellow {
+    /* Full-screen layout styles */
+    font-size: 20px; /* Adjust font size for full-screen */
+    padding: 10px 130px; /* Adjust padding for full-screen */
+  }
+}
+.features .Services {
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr; /* Two columns for mobile layout */
+}
+.features .Services div {
+  padding: 20px;
+  font-size: 16px; /* Decreased font size for mobile */
+  text-align: center;
+  margin: 0;
+}
+.features .Services div img {
+  max-width: 100%;
+}
+.features .Services div h3 {
+  margin-top: 15px;
+}
+@media (min-width: 768px) {
+  .features {
+    /* Full-screen layout styles for screens wider than 768px */
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+  .features .Ad {
+    flex: 1;
+    text-align: left;
+  }
+  .features .Ad p {
+    margin-top: 18px;
+  }
+  .features .Ad h2 {
+    font-size: 43px;
+    padding-bottom: 35px;
+  }
+  .features .Services {
+    flex: 2;
+    grid-template-columns: auto auto;
+    margin-top: 0;
+  }
+  .features .Services div {
+    font-size: 18px;
+    text-align: left;
+    margin-left: 140px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1023px) {
+  .features {
+    /* iPad Mini and iPad Air layout styles */
+  }
+  .features .Ad p {
+    margin-top: 80px; /* Adjust margin for iPads */
+  }
+  .features .Ad h2 {
+    font-size: 36px; /* You can adjust this font size for iPads */
+  }
+  .features .Services div {
+    font-size: 16px; /* You can adjust this font size for iPads */
+    margin-left: 80px; /* Adjust margin for iPads */
+  }
+}
+
 .project-and-case .container {
-  /* Section title styles */
   /* Grid for projects and cases */
 }
 .project-and-case .container .section-title {
   text-align: center;
-  padding-bottom: 20px; /* Add a comment if necessary */
+  padding-bottom: 20px;
 }
 .project-and-case .container .project-and-cases {
   display: grid;
