--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,8 @@ html, body {
   background-color: #191919;
   border: 1px solid #191919;
   color: #F0EFE9;
+  cursor: pointer;
+  box-shadow: 6px 6px 2px gray;
 }
 
 .btn-yellow {
@@ -46,6 +48,7 @@ html, body {
   background-color: #191919;
   border: 1px solid #191919;
   color: #F0EFE9;
+  box-shadow: 6px 6px 2px gray;
 }
 
 .btn-black {
@@ -66,6 +69,8 @@ html, body {
   background-color: #FFFFFF;
   border: 1px solid #191919;
   color: #191919;
+  cursor: pointer;
+  box-shadow: 6px 6px 2px gray;
 }
 
 .btn-transparent {
@@ -86,6 +91,8 @@ html, body {
   background-color: #191919;
   border: 1px solid #191919;
   color: #F0EFE9;
+  cursor: pointer;
+  box-shadow: 6px 6px 2px gray;
 }
 
 .section-title {
@@ -160,6 +167,10 @@ header .container .menu .top-menu .contact-information {
   display: none;
   align-items: center;
 }
+header .container .menu .top-menu .contact-information :hover {
+  cursor: pointer;
+  transform: scale(1.2);
+}
 @media (min-width: 1200px) {
   header .container .menu .top-menu .contact-information {
     display: flex;
@@ -189,6 +200,9 @@ header .container .menu .top-menu .social-media a {
 }
 header .container .menu .top-menu .social-media a:hover {
   color: #7c7c7c;
+}
+header .container .menu .top-menu .social-media :hover {
+  transform: scale(1.8);
 }
 header .container .menu .main-menu {
   display: flex;
@@ -306,19 +320,15 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
   }
 }
 
-.features {
-  display: flex;
-  flex-direction: column; /* Mobile layout: stack elements vertically */
-  align-items: center;
-  text-align: center;
-  padding: 20px;
-}
 .features .container {
+  border: 1px solid #D1D1D1;
+  height: 600;
   margin-top: 120px;
   margin-bottom: 178px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 50px;
 }
 .features .Ad {
   margin-bottom: 110px;
@@ -356,6 +366,8 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
   background-color: #191919;
   border: 1px solid #191919;
   color: #F0EFE9;
+  cursor: pointer;
+  box-shadow: 6px 6px 2px gray;
 }
 @media (min-width: 768px) and (max-width: 1023px) {
   .features .Ad .btn-yellow {
@@ -374,11 +386,10 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
 .features .Services {
   margin-top: 20px;
   display: grid;
-  grid-template-columns: 1fr 1fr; /* Two columns for mobile layout */
+  grid-template-columns: 1fr 1fr;
 }
 .features .Services div {
-  padding: 20px;
-  font-size: 16px; /* Decreased font size for mobile */
+  font-size: 14px;
   text-align: center;
   margin: 0;
 }
@@ -390,7 +401,6 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
 }
 @media (min-width: 768px) {
   .features {
-    /* Full-screen layout styles for screens wider than 768px */
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
@@ -412,24 +422,21 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
     margin-top: 0;
   }
   .features .Services div {
-    font-size: 18px;
+    font-size: 17px;
     text-align: left;
     margin-left: 140px;
   }
 }
 @media (min-width: 768px) and (max-width: 1023px) {
-  .features {
-    /* iPad Mini and iPad Air layout styles */
-  }
   .features .Ad p {
-    margin-top: 80px; /*margin for iPads */
+    margin-top: 80px;
   }
   .features .Ad h2 {
-    font-size: 36px; /*font size for iPads */
+    font-size: 36px;
   }
   .features .Services div {
-    font-size: 16px; /*font size for iPads */
-    margin-left: 80px; /*margin for iPads */
+    font-size: 16px;
+    margin-left: 80px;
   }
 }
 
@@ -442,6 +449,9 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
   .about-co .container {
     justify-content: left;
   }
+}
+.about-co .container .photo i img {
+  box-shadow: 7px 7px 6px gray;
 }
 @media (max-width: 992px) {
   .about-co .container .photo i {
@@ -491,10 +501,14 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
   margin-left: 8px;
   font-size: 10;
 }
+.about-co .container .company .knapp .intro-video :hover {
+  transform: scale(1.3);
+}
 .about-co .container .company .knapp .btn {
   margin-top: 120px;
 }
 .about-co .container .box {
+  box-shadow: 7px 7px 6px gray;
   display: block;
   background-color: #BEEBFF;
   width: 370px;
@@ -569,6 +583,7 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
   justify-content: center;
   width: 308px;
   height: 331px;
+  box-shadow: 7px 7px 6px gray;
 }
 .our-services .container .fields .box1 .container {
   position: relative;
@@ -598,17 +613,18 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
 .our-services .container .fields .box1 .container .btn-circle-black {
   color: #191919;
 }
+.our-services .container .fields .box1 .container .btn-circle-black :hover {
+  transform: scale(1.2);
+}
 .our-services .container .fields .box1 .container .btn-circle-black .fa-2xl {
   font-size: 3em;
-}
-.our-services .container .fields .box1 .container .btn-circle-black:hover {
-  color: #f9d783;
 }
 .our-services .container .fields .box2 {
   background-color: #f9d783;
   justify-content: center;
   width: 308px;
   height: 331px;
+  box-shadow: 7px 7px 6px gray;
 }
 .our-services .container .fields .box2 .container {
   position: relative;
@@ -638,17 +654,18 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
 .our-services .container .fields .box2 .container .btn-circle-black {
   color: #191919;
 }
+.our-services .container .fields .box2 .container .btn-circle-black :hover {
+  transform: scale(1.2);
+}
 .our-services .container .fields .box2 .container .btn-circle-black .fa-2xl {
   font-size: 3em;
-}
-.our-services .container .fields .box2 .container .btn-circle-black:hover {
-  color: #FFFFFF;
 }
 .our-services .container .fields .box3 {
   background-color: #FFFFFF;
   justify-content: center;
   width: 308px;
   height: 331px;
+  box-shadow: 7px 7px 6px gray;
 }
 .our-services .container .fields .box3 .container {
   position: relative;
@@ -678,17 +695,18 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
 .our-services .container .fields .box3 .container .btn-circle-black {
   color: #191919;
 }
+.our-services .container .fields .box3 .container .btn-circle-black :hover {
+  transform: scale(1.2);
+}
 .our-services .container .fields .box3 .container .btn-circle-black .fa-2xl {
   font-size: 3em;
-}
-.our-services .container .fields .box3 .container .btn-circle-black:hover {
-  color: #f9d783;
 }
 .our-services .container .fields .box4 {
   background-color: #FFFFFF;
   justify-content: center;
   width: 308px;
   height: 331px;
+  box-shadow: 7px 7px 6px gray;
 }
 .our-services .container .fields .box4 .container {
   position: relative;
@@ -718,11 +736,11 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
 .our-services .container .fields .box4 .container .btn-circle-black {
   color: #191919;
 }
+.our-services .container .fields .box4 .container .btn-circle-black :hover {
+  transform: scale(1.2);
+}
 .our-services .container .fields .box4 .container .btn-circle-black .fa-2xl {
   font-size: 3em;
-}
-.our-services .container .fields .box4 .container .btn-circle-black:hover {
-  color: #f9d783;
 }
 .our-services .container .wavy-lines {
   position: absolute;
@@ -753,6 +771,7 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
   background-color: #191919;
   border: 1px solid #191919;
   color: #F0EFE9;
+  box-shadow: 6px 6px 2px gray;
 }
 
 .why .wrapper {
@@ -846,6 +865,9 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
   z-index: 1;
   margin-left: 112px;
 }
+.why .wrapper .photo-wrapper i img {
+  box-shadow: 7px 7px 6px gray;
+}
 
 .project-and-case .container {
   display: grid;
@@ -881,6 +903,7 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
 .project-and-case .container .project-and-cases .project img {
   width: 100%;
   height: auto;
+  box-shadow: 7px 7px 6px gray;
 }
 .project-and-case .container .project-and-cases .project h3 {
   font-family: "DM Sans", sans-serif;
@@ -955,6 +978,7 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
   background-color: #191919;
   border: 1px solid #191919;
   color: #F0EFE9;
+  box-shadow: 6px 6px 2px #b48305;
 }
 .team-and-reviews .container .team .staff {
   display: flex;
@@ -962,6 +986,9 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
 }
 .team-and-reviews .container .team .staff .first, .team-and-reviews .container .team .staff .second, .team-and-reviews .container .team .staff .third, .team-and-reviews .container .team .staff .fourth {
   display: block;
+}
+.team-and-reviews .container .team .staff .first img, .team-and-reviews .container .team .staff .second img, .team-and-reviews .container .team .staff .third img, .team-and-reviews .container .team .staff .fourth img {
+  box-shadow: 7px 7px 6px gray;
 }
 .team-and-reviews .container .team .staff .first h3, .team-and-reviews .container .team .staff .second h3, .team-and-reviews .container .team .staff .third h3, .team-and-reviews .container .team .staff .fourth h3 {
   margin-top: 40px;
@@ -1161,6 +1188,7 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
   background-color: transparent;
   border: 1px solid #191919;
   color: #191919;
+  box-shadow: 6px 6px 2px gray;
 }
 
 .container {
@@ -1206,6 +1234,7 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
   background-color: #191919;
   border: 1px solid #191919;
   color: #F0EFE9;
+  box-shadow: 6px 6px 2px gray;
 }
 .container .events {
   display: flex;
@@ -1213,6 +1242,7 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
 }
 .container .events .box1 img {
   margin-right: 30px;
+  box-shadow: 7px 7px 6px gray;
 }
 .container .events .box1 .event-info {
   display: block;
@@ -1240,6 +1270,7 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
 }
 .container .events .box2 img {
   margin-right: 30px;
+  box-shadow: 7px 7px 6px gray;
 }
 .container .events .box2 .event-info {
   display: block;
@@ -1264,6 +1295,9 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
   font-size: 16px;
   font-weight: 400;
   margin-top: 25px;
+}
+.container .events .box3 img {
+  box-shadow: 7px 7px 6px gray;
 }
 .container .events .box3 .event-info {
   display: block;
@@ -1302,7 +1336,7 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
 }
 .newsletter .background-wavy-lines {
   position: absolute;
-  bottom: 50px;
+  bottom: 15px;
   right: 0;
 }
 .newsletter .container {
@@ -1324,4 +1358,89 @@ header .container .menu .main-menu nav a.active ::after, header .container .menu
   outline: none;
   border: 1px solid #dad9d3;
   margin-right: 20px;
+}
+
+.foot-info {
+  background-color: #0E1021;
+  position: relative;
+}
+.foot-info .wrapper {
+  margin-left: 100px;
+  margin-right: 100px;
+}
+.foot-info .wrapper .wavy-lines {
+  position: absolute;
+  right: 0;
+  bottom: 78px;
+  color: #B6B7BC;
+}
+.foot-info .wrapper .boxes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
+}
+.foot-info .wrapper .boxes .box-logo {
+  width: 309px;
+  height: 207, 92px;
+  margin-top: 90px;
+  margin-bottom: 112px;
+  color: #FFFFFF;
+}
+.foot-info .wrapper .boxes .box-logo .logo {
+  margin-bottom: 36px;
+}
+.foot-info .wrapper .boxes .box1, .foot-info .wrapper .boxes .box2, .foot-info .wrapper .boxes .box3, .foot-info .wrapper .boxes .box4 {
+  margin-top: 150px;
+  margin-bottom: 112px;
+}
+.foot-info .wrapper .boxes .box1 h2, .foot-info .wrapper .boxes .box2 h2, .foot-info .wrapper .boxes .box3 h2, .foot-info .wrapper .boxes .box4 h2 {
+  font-family: "Dm Sans", sans-serif;
+  font-size: 22px;
+  font-weight: 700;
+  margin-bottom: 42px;
+  color: #FFFFFF;
+}
+.foot-info .wrapper .boxes .box1 p, .foot-info .wrapper .boxes .box2 p, .foot-info .wrapper .boxes .box3 p, .foot-info .wrapper .boxes .box4 p {
+  font-family: "Inter", sans-serif;
+  font-size: 18px;
+  line-height: 28px;
+  color: #B6B7BC;
+}
+.foot-info .wrapper .boxes .box1 p:hover, .foot-info .wrapper .boxes .box2 p:hover, .foot-info .wrapper .boxes .box3 p:hover, .foot-info .wrapper .boxes .box4 p:hover {
+  transform: scale(1.2);
+}
+.foot-info .wrapper .boxes .box1 a, .foot-info .wrapper .boxes .box2 a, .foot-info .wrapper .boxes .box3 a, .foot-info .wrapper .boxes .box4 a {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.foot-wrapper {
+  border-top: 1px solid #3E404D;
+  display: flex;
+  height: 78px;
+  justify-content: space-between;
+  padding-top: 25px;
+  margin: auto;
+}
+.foot-wrapper .all-rights {
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  line-height: 26px;
+  color: #B6B7BC;
+  margin-left: 100px;
+}
+.foot-wrapper .social-media {
+  margin-right: 100px;
+}
+.foot-wrapper .social-media a {
+  color: #FFFFFF;
+  font-size: 1.3rem;
+  margin-left: 10px;
+}
+.foot-wrapper .social-media a :hover {
+  color: #7c7c7c;
+}
+.foot-wrapper .social-media :hover {
+  transform: scale(1.8);
 }
